--- a/authentication/package.json
+++ b/authentication/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.6",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.8.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
